# ccrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: asm.rs  asmgen.rs  debug_info.rs  lib.rs  main.rs  resolver.rs  tacky.rs
src/lexer/: mod.rs  test.rs  token.rs
src/parser/: ast.rs  expr.rs  mod.rs  pretty_print_ast.rs  stmt.rs  test.rs
src/resolver/: mod.rs  scoped_var_map.rs
src/type_checker/: mod.rs  symbol_table.rs  type.rs
tests/: generate_tests.py  test_binary_op.rs  test_do_while.rs  test_loop_1.rs  test_loop_bitwise.rs  test_loop_collatz.rs  test_loop_floyd.rs  test_loop_prime.rs  test_return.rs
tests/files/: test_binary_op.c  test_do_while.c  test_loop_1.c  test_loop_bitwise.c  test_loop_collatz.c  test_loop_floyd.c  test_loop_prime.c
