[package]
name = "ccrust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
multipeek = "0.1.2"
ordermap = "0.5.5"
paste = "1.0.15"
thiserror = "1.0.63"

[features]
default = ["resolve"] # , "asm_gen"]
resolve = []
asm_gen = []
